// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Test renders correctly 1`] = `
<nav
  className="sc-dlnjPT jScYVP"
>
  <a
    href="/"
  >
    <div
      className="logo"
    >
      Profissa
    </div>
  </a>
  <div
    className="sc-gtssRu jnAMnz"
    open={true}
  >
    <div />
    <div />
    <div />
  </div>
  <ul
    className="sc-bdnylx faGLEd"
    open={true}
  >
    <testDiv
      className="div-usernavbar"
      onClick={[Function]}
    >
      <p>
        name
      </p>
      <img
        className="photo-navbar"
        src="userDefault.jpg"
      />
    </testDiv>
  </ul>
</nav>
`;

exports[`Nav Test renders correctly 2`] = `
<nav
  className="sc-dlnjPT jScYVP"
>
  <a
    href="/"
  >
    <div
      className="logo"
    >
      Profissa
    </div>
  </a>
  <div
    className="sc-gtssRu gWHJkT"
    open={false}
  >
    <div />
    <div />
    <div />
  </div>
  <ul
    className="sc-bdnylx bcEbrR"
    open={false}
  >
    <testDiv
      className="div-usernavbar"
      onClick={[Function]}
    >
      <p>
        name
      </p>
      <img
        className="photo-navbar"
        src="userDefault.jpg"
      />
    </testDiv>
  </ul>
</nav>
`;
